--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "firebase": "^5.7.0",
+    "firebase": "5.3.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "react-redux": "^6.0.0",
+    "react-dom": "16.6.3",
+    "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
